--- a/spa application/appsettings.Development.json
+++ b/spa application/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "server=127.0.0.1;uid=root;pwd=root;database=test"
+    "MySql": "server=127.0.0.1;uid=root;pwd=Isa!5022004;database=test"
   },
   "Logging": {
     "LogLevel": {
@@ -13,11 +13,6 @@
   },
   "SupportedCultureOptions": {
     "DefaultCultureRoute": "en",
-    /**
-    * "route":"CultureInfo"
-    * all supported cultures for windows, you can see here:
-    * https://docs.microsoft.com/en-us/openspecs/windows_protocols/ms-lcid/a9eac961-e77d-41a6-90a5-ce1a8b0cdb9c
-    */
     "SupportedCultures": {
       "en" : "en",
       "kg" : "ky",
